welcome screen 'done'

--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -5,5 +5,13 @@
     "next": "التالي",
     "previous": "السابق",
     "login": "تسجيل الدخول",
-    "register": "التسجيل"
+    "register": "التسجيل",
+    "meetNewFriends": "التقي بأصدقاء جُدد",
+    "meetNewFriendsDesc": "هل تعلم ؟ ان الاصدقاء الذين تقابلهم في الجامعة هم افضل انواع الاصدقاء",
+    "putYourMarkOnTheCampus": "ضع بصمتك في الحرم الجامعي",
+    "putYourMarkOnTheCampusDesc": "ميّز نفسك بمثابرتك في العمل و بأخلاقك",
+    "makeUnforgettableMemories": "اصنع ذكريات لا تُنسى",
+    "makeUnforgettableMemoriesDesc": "التقط أفضل ذكرياتك في مكان واحد، و مجتمع واحد",
+    "shareYourMoments": "شارك لحضاتك",
+    "shareYourMomentDesc": "شارك سعادتك و إنجازاتك و حتى لحضات تعثرك"
 }
