--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -5,5 +5,13 @@
     "next": "Next",
     "previous": "Previous",
     "login": "Login",
-    "register": "Register"
+    "register": "Register",
+    "meetNewFriends": "Meet new friends",
+    "meetNewFriendsDesc": "Did you know? friends you make in college are the best kind of friends",
+    "putYourMarkOnTheCampus": "Put your mark on the campus",
+    "putYourMarkOnTheCampusDesc": "Mark yourself with your hard work and your ETHICS",
+    "makeUnforgettableMemories": "Make unforgettable memories",
+    "makeUnforgettableMemoriesDesc": "Capture your best memories in one place, one community",
+    "shareYourMoments": "Share your moments",
+    "shareYourMomentDesc": "Share your happiness, achievements, and even your falls"
 }
