--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -4,8 +4,9 @@
     "enjoyStudyingOnUOTCampus": "استمتع بالدراسة داخل الحرم الجامعي",
     "next": "التالي",
     "previous": "السابق",
-    "login": "تسجيل الدخول",
+    "login": "الدخول",
     "register": "التسجيل",
+    "signup": "تسجيل",
     "meetNewFriends": "التقي بأصدقاء جُدد",
     "meetNewFriendsDesc": "هل تعلم ؟ ان الاصدقاء الذين تقابلهم في الجامعة هم افضل انواع الاصدقاء",
     "putYourMarkOnTheCampus": "ضع بصمتك في الحرم الجامعي",
@@ -13,5 +14,8 @@
     "makeUnforgettableMemories": "اصنع ذكريات لا تُنسى",
     "makeUnforgettableMemoriesDesc": "التقط أفضل ذكرياتك في مكان واحد، و مجتمع واحد",
     "shareYourMoments": "شارك لحضاتك",
-    "shareYourMomentDesc": "شارك سعادتك و إنجازاتك و حتى لحضات تعثرك"
+    "shareYourMomentDesc": "شارك سعادتك و إنجازاتك و حتى لحضات تعثرك",
+    "email": "البريد الالكتروني",
+    "password": "كلمة المرور",
+    "or": "او"
 }
